<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/profile_image"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/email"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/image"
        android:text="@string/phone"
        android:textStyle="bold" />

    <!--<Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/name"
        android:text="@string/edit"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btm_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/email"
        android:layout_below="@+id/btn_edit"
        android:layout_marginTop="15dp"
        android:layout_marginStart="70dp"
        android:text="@string/delete"
        android:textAllCaps="false"/>-->



    </RelativeLayout>

</androidx.cardview.widget.CardView>