<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile_image"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/image"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_person"
            app:endIconMode="clear_text"
            android:hint="@string/name"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@color/blue"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_email"
            app:endIconMode="clear_text"
            android:hint="@string/email"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@color/blue"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_phone"
            app:endIconMode="clear_text"
            android:hint="@string/phone"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:textCursorDrawable="@color/blue" />

        </com.google.android.material.textfield.TextInputLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/layout_phone">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="80dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"/>

           <Button
               android:id="@+id/btn_save"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="50dp"
               android:layout_marginStart="35dp"
               android:text="@string/save"
               android:textAllCaps="false"
               android:textSize="20sp"
               android:textStyle="bold"/>

       </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>